# CCTV_Viewer

./: .gitignore  ARCHITECTURE.md  LICENSE  PLAN.md  README.md
backend/: pyproject.toml
backend/src/cctv/: main.py  paths.py
backend/src/cctv/adapters/: __init__.py  base.py  dahua.py
backend/src/cctv/api/: deps.py  devices.py  downloads.py  recordings.py  settings.py  streams.py
backend/src/cctv/services/: device_store.py  download_manager.py  go2rtc.py  settings.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChannelPicker.tsx  DownloadModal.tsx  RecordingsBrowser.tsx  VideoPlayer.tsx
frontend/src/pages/: DevicesPage.tsx  DownloadsPage.tsx  LivePage.tsx  SearchPage.tsx
